First page content and layout complete.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,58 @@
                     <div class="stackMenu_Child"></div>
                 </div>
             </div>
-            <img id="pageLogo" src="/public/Logoish.png"></img>
+            <img id="pageLogo" src="/public/Lune Primary Logo.png"></img>
+        </div>
+        <div id="bannerContainer">
+            <div id="banner"></div>
+        </div>
+        <div id="discoverContainer1">
+            <div id="discoverText11">
+                <h1>Discover Luxury</h1>
+                <p>Unlock an unforgettable atmosphere, well crafted desserts, and a top notch selection of in-house coffee. A retreat you'll want to visit again.</p>
+                <a class="link45">LEARN ABOUT US</a>
+            </div>
+            <div id="loungeLandscape">
+                <img src="/public/Lounge_Landscape.jpg"></img>
+            </div>
+            <div id="loungePortrait">
+                <img src="/public/Lounge_Portrait.jpg"></img>
+            </div>
+        </div>
+        <div id="menuCard">
+            <div id="cardImage">
+            </div>
+            <div id="cardCaption">
+                <h2>PROVIDING A COFFEE AND DESSERT SELECTION LIKE NO OTHER IN THE MIDDLE EAST</h2>
+                <a class="link82">CHECK OUR MENU</a>
+            </div>
+        </div>
+        <div id="discoverContainer2">
+            <div id="cafePortrait">
+                <img src="/public/Cafe_Portrait.jpg"></img>
+            </div>
+            <div id="discoverText12">
+                <h1>Discover Luxury</h1>
+                <p>Unlock an unforgettable atmosphere, well crafted desserts, and a top notch selection of in-house coffee. A retreat you'll want to visit again.</p>
+                <a class="link45">LEARN ABOUT US</a>
+            </div>
+            <div id="cafeLandscape">
+                <img src="/public/Cafe_Landscape.jpg"></img>
+            </div>
+        </div>
+        <div id="contactPane">
+            <div id="about">
+                
+            </div>
+            <div id="contact">
+
+            </div>
+            <div id="social">
+
+            </div>
+            <div id="mailingList">
+                
+            </div>
         </div>
     </div>
 </body>
