Attempted resource path fix.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lune Lounge</title>
     <link rel="stylesheet" href="css/index.css">
-    <script defer type="text/javascript" src="/js/index.js"></script>
+    <script defer type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
     <div id="pageContainer">
@@ -25,7 +25,7 @@
                     <div class="stackMenu_Child"></div>
                 </div>
             </div>
-            <img id="pageLogo" src="/public/Lune Primary Logo.png"></img>
+            <img id="pageLogo" src="public/Lune Primary Logo.png"></img>
         </div>
         <div id="bannerContainer">
             <div id="banner"></div>
@@ -37,10 +37,10 @@
                 <a class="link45">LEARN ABOUT US</a>
             </div>
             <div id="loungeLandscape">
-                <img src="/public/Lounge_Landscape.jpg"></img>
+                <img src="public/Lounge_Landscape.jpg"></img>
             </div>
             <div id="loungePortrait">
-                <img src="/public/Lounge_Portrait.jpg"></img>
+                <img src="public/Lounge_Portrait.jpg"></img>
             </div>
         </div>
         <div id="menuCard">
@@ -53,7 +53,7 @@
         </div>
         <div id="discoverContainer2">
             <div id="cafePortrait">
-                <img src="/public/Cafe_Portrait.jpg"></img>
+                <img src="public/Cafe_Portrait.jpg"></img>
             </div>
             <div id="discoverText12">
                 <h1>ENJOY VARIETY</h1>
@@ -61,7 +61,7 @@
                 <a class="link45">FIND US</a>
             </div>
             <div id="cafeLandscape">
-                <img src="/public/Cafe_Landscape.jpg"></img>
+                <img src="public/Cafe_Landscape.jpg"></img>
             </div>
         </div>
         <div id="contactPane">
