Added page icon and 'about us' page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lune Lounge</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/index.css">
     <script defer type="text/javascript" src="js/index.js"></script>
 </head>
@@ -12,7 +13,7 @@
         <div id="navMenu">
             <div style="margin-top: 20vh; margin-left: 20vh;">
                 <div class="navLink1" onclick="toggleNavMenu(false)">BACK</div>
-                <div class="navLink2">ABOUT US</div>
+                <div class="navLink2" onclick="() => window.location.href = 'https://mikeblu.github.io/Lune-Lounge-Website/html/about.html';">ABOUT US</div>
                 <div class="navLink3">MENU</div>
                 <div class="navLink4">CONTACT</div>
             </div>
