Added navigation to 'about us'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="navMenu">
             <div style="margin-top: 20vh; margin-left: 20vh;">
                 <div class="navLink1" onclick="toggleNavMenu(false)">BACK</div>
-                <div class="navLink2" onclick="() => window.location.href = 'https://mikeblu.github.io/Lune-Lounge-Website/html/about.html';">ABOUT US</div>
+                <div class="navLink2" onclick="(() => {window.location.href = 'https://mikeblu.github.io/Lune-Lounge-Website/html/about.html'})();">ABOUT US</div>
                 <div class="navLink3">MENU</div>
                 <div class="navLink4">CONTACT</div>
             </div>
