Fixed discovercontainer resizing issues.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Lune Lounge</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/index.css">
-    <script defer type="text/javascript" src="js/index.js"></script>
+    <script defer type="text/javascript" src="js/default.js"></script>
 </head>
 <body>
     <div id="pageContainer">
         <div id="navMenu">
             <div style="margin-top: 20vh; margin-left: 20vh;">
                 <div class="navLink1" onclick="toggleNavMenu(false)">BACK</div>
-                <div class="navLink2" onclick="(() => {window.location.href = 'https://mikeblu.github.io/Lune-Lounge-Website/html/about.html'})();">ABOUT US</div>
+                <div class="navLink2" onclick="(() => {window.location.href = 'html/about.html'})();">ABOUT US</div>
                 <div class="navLink3">MENU</div>
                 <div class="navLink4">CONTACT</div>
             </div>
