--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
     <title>Lune Lounge</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="stylesheet" href="../css/about.css">
-    <script defer type="text/javascript" src="../js/index.js"></script>
+    <script defer type="text/javascript" src="../js/default.js"></script>
 </head>
 <body>
     <div id="pageContainer">
